--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-#+TITLE: Readme
+#+TITLE: Primaseru
 
 
 Primaseru is [[https://smktelkom-bdg.sch.id/][Vocational High School Telkom Bandung]] web app for registering a new student.
@@ -10,9 +10,18 @@ for windows make sure python can be accessed from cmd or powershell (or just ins
 #+BEGIN_SRC shell
 git clone https://github.com/Lukmanhakim112/primaseru
 #+END_SRC
-*** Creting a new virtual environment
+*** Creting a new virtual environments
 #+BEGIN_SRC shell
 python -m venv venv
+#+END_SRC
+*** Activate virtual environments
+For Unix/Linux
+#+BEGIN_SRC shell
+source venv/bin/activate
+#+END_SRC
+For Windows
+#+BEGIN_SRC shell
+venv\Scripts\activate
 #+END_SRC
 *** Install required packages
 #+BEGIN_SRC shell
