--- a/README.org
+++ b/README.org
@@ -36,3 +36,15 @@ Test by typing:
 #+BEGIN_SRC shell
 ./manage.py runserver
 #+END_SRC
+* TODO
+[] Move PPDB information source to register page
+[] Re-arrange side bar dashboard
+[] add verification status at family certificate
+[] add alert when update the data in the dashboard
+[] add length to test schedule
+[] fix LMS account schedule page
+[] make form legend changes dynamically
+[] make visual change on generate register number button
+[] fix button on on "Pengumuman"
+[] add re-register payment page
+[] apply new payment page
