--- a/README.org
+++ b/README.org
@@ -37,14 +37,14 @@ Test by typing:
 ./manage.py runserver
 #+END_SRC
 * TODO
-[x] Move PPDB information source to register page
-[] Re-arrange side bar dashboard
+[X] Move PPDB information source to register page
+[X] Re-arrange side bar dashboard
 [] add verification status at family certificate
 [] add alert when update the data in the dashboard
-[] add length to test schedule
-[] fix LMS account schedule page
-[] make form legend changes dynamically
-[] make visual change on generate register number button
+[x] add length to test schedule
+[X] fix LMS account schedule page
+[X] make form legend changes dynamically
+[X] make visual change on generate register number button
 [] fix button on on "Pengumuman"
 [] add re-register payment page
 [x] apply new payment page
