add verfication status

--- a/README.org
+++ b/README.org
@@ -39,7 +39,7 @@ Test by typing:
 * TODO
 [X] Move PPDB information source to register page
 [X] Re-arrange side bar dashboard
-[] add verification status at family certificate
+[X] add verification status at family certificate
 [] add alert when update the data in the dashboard
 [x] add length to test schedule
 [X] fix LMS account schedule page
