--- a/README.org
+++ b/README.org
@@ -48,3 +48,5 @@ Test by typing:
 [] fix button on on "Pengumuman"
 [] add re-register payment page
 [x] apply new payment page
+[] change from choice to multiple choice, ppdb
+[] add "keinginan siapa masuk ke smk"
