--- a/README.org
+++ b/README.org
@@ -62,7 +62,7 @@ Test by typing:
 [] seperate 'raport' from file student model
 [] seperate 'kk' from file student model
 [] make fail safe system for generating and reseting register number
-[] change 'prestasi' to 'penghargaan yang pernah di raih'
-[] fix mobile view on re-payment page
-[] fix typo 'pribari'
+[X] change 'prestasi' to 'penghargaan yang pernah di raih'
+[X] fix mobile view on re-payment page
+[X] fix typo 'pribari'
 [] add salution page
