--- a/README.org
+++ b/README.org
@@ -74,3 +74,7 @@ Test by typing:
 ** [X] refactor export excel
 ** [X] change 'berkas' button to nav
 ** [X] add 'jalur pendaftaran' to major form
+** [X] fix typo on 'semester keterangan buta warna'
+** [X] create menu for 'berkas daftar ulang'
+** [X] change 'bagian'
+** [X] add help text "ijazah dapat menyusul"
